Die Seitenbezeichnung passt sich nun der Spracheinstellung von babel an.

--- a/Brief.tex
+++ b/Brief.tex
@@ -1,11 +1,11 @@
 \documentclass[twoside, A]{brbrief}
-\usepackage[ngerman]{babel}		% for hyphenation and date format
-\usepackage[utf8]{inputenc}		% 
-\usepackage[OT1]{fontenc}		% Intelligente Ligaturen
-\usepackage{CormorantGaramond}	% schicke Schrift
-\usepackage{pdfpages}			% PDF-Dateien einfügen
-\usepackage[useregional]{datetime2}			% Daten formatieren
-\usepackage{lipsum}				% Lorem-ipsum-Text-Generator
+\usepackage[ngerman]{babel}			% Spracheinstellungen, zwingend benötigt
+\usepackage[utf8]{inputenc}			% Wahl der Zeichenencodierung, benötigt
+\usepackage[OT1]{fontenc}			% Intelligente Ligaturen, benötigt
+\usepackage{CormorantGaramond}		% schicke Schrift, optional
+\usepackage{pdfpages}				% PDF-Dateien einfügen, optional
+\usepackage[useregional]{datetime2}	% Daten formatieren, optional
+\usepackage{lipsum}					% Lorem-ipsum-Text-Generator, kann entfernt werden
 
 % Absenderfeld
 \Informationsblock{
